force-app/main/default/objects/Substance_Use_History__c/Substance_Use_History__c.object-meta.xml
<CustomObject>
    <label>Substance Use History</label>
    <nameField>
        <displayFormat>SUH-{0000}</displayFormat>
        <label>Substance Use History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Substance Use History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>