force-app/main/default/objects/Substance_Use_History__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>This field is used to enter the amount of the substance consumed or administered by the patient, providing insight into the extent of usage.</description>
    <label>Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>