force-app/main/default/objects/Substance_Use_History__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>This field will allow the user to leave additional free-text comments or notes related to the patient&apos;s substance use.</description>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>