force-app/main/default/objects/Substance_Use_History__c/fields/First_Use__c.field-meta.xml
<CustomField>
    <fullName>First_Use__c</fullName>
    <description>This field is used to specify when the patient initially used the substance, contributing to a detailed timeline of their substance use history.</description>
    <label>First Use</label>
    <length>255</length>
    <type>Text</type>
</CustomField>