force-app/main/default/objects/Substance_Use_History__c/fields/Frequency__c.field-meta.xml
<CustomField>
    <fullName>Frequency__c</fullName>
    <description>This field is used to specify how often the patient uses the substance within a given time frame. Indicate the frequency of substance use, such as &quot;daily,&quot; &quot;weekly,&quot; or any other applicable frequency.</description>
    <label>Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Intermittent</fullName>
            </value>
            <value>
                <fullName>Binge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>