force-app/main/default/objects/Substance_Use_History__c/fields/Last_Use__c.field-meta.xml
<CustomField>
    <fullName>Last_Use__c</fullName>
    <description>This field is used to specify when the patient last used the substance, aiding in tracking the recency of use.</description>
    <label>Last Use</label>
    <length>100</length>
    <type>Text</type>
</CustomField>