force-app/main/default/objects/Substance_Use_History__c/fields/Pre_assessment__c.field-meta.xml
<CustomField>
    <fullName>Pre_assessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is a lookup to the Pre-assessment object, allowing the association of specific pre-assessment records with the Substance Use History entry</description>
    <label>Pre-assessment</label>
    <referenceTo>Pre_assessment__c</referenceTo>
    <relationshipLabel>Substance Use History</relationshipLabel>
    <relationshipName>Substance_Use_History</relationshipName>
    <type>Lookup</type>
</CustomField>