force-app/main/default/objects/Substance_Use_History__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <description>This field is used to specify the method or route of administration of the substance. Indicate how the substance is typically administered, such as &quot;oral,&quot; &quot;inhalation,&quot; &quot;injection,&quot; or any other applicable method.</description>
    <label>Route/Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>