force-app/main/default/objects/Substance_Use_History__c/fields/Substance__c.field-meta.xml
<CustomField>
    <fullName>Substance__c</fullName>
    <description>This field is used to capture the name of or type of substance used by the patient, providing a clear understanding of the specific substance involved in the patient&apos;s history.</description>
    <label>Substance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alcohol</fullName>
            </value>
            <value>
                <fullName>Heroin</fullName>
            </value>
            <value>
                <fullName>Oxycodone</fullName>
            </value>
            <value>
                <fullName>Cocaine</fullName>
            </value>
            <value>
                <fullName>Crack</fullName>
            </value>
            <value>
                <fullName>Xanax</fullName>
            </value>
            <value>
                <fullName>Suboxone</fullName>
            </value>
            <value>
                <fullName>Amphetamines</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>